# Molecule-Ranker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  openapi-v1.json  pyproject.toml  release_manifest.json
.github/workflows/: ci.yml  connector-smoke.yml  (+3 more)
deployment/: Dockerfile  README.md  docker-compose.enterprise.yml  hardening.md  nginx.example.conf  uvicorn_config.py
docs/: enterprise_sdk.md  pilot_sdk.md  v1.0-release-readiness.md  v1.9-pilot-readiness.md  v2.0-enterprise-release.md  v2.0-training.md  v2.0-validation-evidence-packages.md
examples/: alzheimers_example.md
molecule_ranker/: __init__.py  cli.py  client.py  config.py  orchestrator.py  schemas.py
molecule_ranker_sdk/: __init__.py  client.py  errors.py  models.py
supabase/: README.md
templates/: README.md  assay_results_template.csv  assay_results_template.json
tests/: __init__.py  conftest.py  test_active_design.py  test_admin_docs.py  test_agent_governance_artifacts.py  test_agent_governance_audits.py  test_agent_governance_budgets.py  test_agent_governance_capability_grants.py  test_agent_governance_certification.py  test_agent_governance_certification_cli.py  test_agent_governance_cli_group.py  test_agent_governance_evals.py  test_agent_governance_grant_cli.py  test_agent_governance_hosted.py  test_agent_governance_incident_cli.py  test_agent_governance_incidents.py  test_agent_governance_policy_engine.py  test_agent_governance_risk.py  test_agent_governance_run_control.py  test_agent_governance_run_control_cli.py  test_agent_governance_runtime_integrations.py  test_agent_governance_schemas.py  test_agent_governance_simulator.py  test_agent_governance_v26.py  test_agent_graph_runtime.py  test_agent_repair_evals.py  test_agent_repair_evaluators.py  test_agent_repair_reports.py  test_agent_repair_schemas.py  test_agents_base.py  test_api_contracts_v1.py  test_artifact_contracts.py  test_autonomy_validation_boundary_tests.py  test_autonomy_validation_evals.py  test_autonomy_validation_performance.py  test_autonomy_validation_reliability.py  test_autonomy_validation_residual_risk.py  test_autonomy_validation_result_certification.py  test_autonomy_validation_runner.py  test_autonomy_validation_safety_case.py  (+377 more)
tests_integration/: test_experimental_feedback_loop.py
tests_live/: test_e2e_readonly.py  test_live_developability.py  test_live_generation.py  test_live_health.py  test_live_literature.py  test_live_pubmed_smoke.py  test_live_small_run.py
tests_redteam/: test_artifact_path_traversal.py  test_codex_fabrication.py  test_dashboard_xss.py  test_generated_overclaims.py  test_integration_write_bypass.py  test_lab_protocols.py  test_medical_advice.py  test_prompt_injection.py  test_secret_exfiltration.py  test_synthesis_instructions.py
tests_validation/: conftest.py  test_biologics_guardrails.py  test_design_validation.py  test_golden_codex.py  test_golden_existing_ranking.py  test_golden_experiments.py  test_golden_generation.py  test_golden_hosted.py  test_golden_integrations.py  test_golden_review.py  test_guardrail_audit.py  test_model_validation.py  test_platform_readiness.py  test_portfolio_validation.py  test_security_audit.py  test_structure_validation.py  test_tool_validation.py
(+1036 files in other folders)
