[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molecule-ranker"
version = "0.2.0"
description = "Agent-first existing-molecule ranking prototype for biomedical research hypotheses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "requests>=2.32,<3",
  "typer>=0.12,<1",
]

[project.scripts]
molecule-ranker = "molecule_ranker.cli:app"

[dependency-groups]
dev = [
  "pyright>=1.1,<2",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["molecule_ranker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "live: live public API smoke tests that are not deterministic",
  "network: tests that require public network access",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
