[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molecule-ranker"
version = "2.6.0"
description = "Internal research platform for source-backed molecule ranking, guarded Codex orchestration, and campaign co-pilot workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "psycopg[binary]>=3,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2,<3",
  "rdkit>=2023.9",
  "requests>=2.32,<3",
  "selfies>=2.1,<3",
  "sqlalchemy>=2,<3",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
molecule-ranker = "molecule_ranker.cli:app"

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "pyright>=1.1,<2",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]
surrogate = [
  "scikit-learn>=1.4,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["molecule_ranker", "molecule_ranker_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_integration", "tests_validation", "tests_redteam"]
pythonpath = ["."]
markers = [
  "browser: optional browser-level smoke tests",
  "live: live public API smoke tests that are not deterministic",
  "network: tests that require public network access",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
